...
import br.com.usinasantafe.cvf.lib.StatusSend
import br.com.usinasantafe.cvf.lib.errors
import br.com.usinasantafe.cvf.lib.msg
import br.com.usinasantafe.cvf.utils.UiStatusStateUpdate


const val TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE = "tag_button_ok_alert_dialog_simple"
const val TAG_BUTTON_YES_ALERT_DIALOG_CHECK = "tag_button_yes_alert_dialog_check"
const val TAG_BUTTON_NO_ALERT_DIALOG_CHECK = "tag_button_no_alert_dialog_check"
const val TAG_TOP_BAR_MENU = "tag_top_bar_menu"
const val TAG_TOP_BAR_DELETE = "tag_top_bar_delete"
const val TAG_TOP_BAR_TITLE = "tag_top_bar_title"
const val TAG_TOP_BAR_MENU_ITEM_CONFIG = "tag_top_bar_menu_item_config"
...
                textAlign = TextAlign.Center
            )
        },
        text = {
            Text(
                text = text,
                modifier = Modifier.testTag("text_alert_dialog_simple")
            )
        },
        onDismissRequest = onClickOk,
        confirmButton = {
            Button(
                onClick = onClickOk,
                modifier = Modifier.testTag(TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE)
            ) {
                Text("OK")
            }
        },
    )
}


...
