...
    <string name="text_number_8">8</string>
    <string name="text_number_9">9</string>
    <string name="text_number_0">0</string>
    <string name="text_number_00">00</string>
    <string name="text_comma">,</string>
    <string name="text_pattern_clean">APAGAR</string>
    <string name="text_pattern_update">ATUALIZAR DADOS</string>
    <string name="text_pattern_ok">OK</string>
    <string name="text_pattern_cancel">CANCELAR</string>
    <string name="text_pattern_return">RETORNAR</string>
    <string name="text_config">CONFIGURAÇÃO</string>
    <string name="text_number">NRO APARELHO</string>
    S<string name="text_password">SENHA</string>
...
